--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.0.5</domain>
         <domain includeSubdomains="true">192.168.162.243</domain>
+        <domain includeSubdomains="true">192.168.188.243</domain>
     </domain-config>
 </network-security-config>
