--- a/app/src/main/res/layout/activity_view_button.xml
+++ b/app/src/main/res/layout/activity_view_button.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Boton"
+        android:textColor="@color/white"
+        android:text="SenseApp"
         android:textSize="24sp" />
 </RelativeLayout>
